Stage 1: remove unused import.