@@ -1,13 +1,11 @@
 package com.example.service.impl;
 
 import com.example.repository.DictionaryRepository;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.context.event.annotation.BeforeTestExecution;
 
 import java.util.List;
 import java.util.Set;
@@ -52,7 +50,7 @@ class WordSplitServiceImplTest {
         List<String> results = wordSplitService.wordSplit("sam");
 
         assertEquals(1, results.size());
-        assertEquals("sam", results.get(0));
+        assertEquals("sam", results.getFirst());
     }
 
     @Test
